--- a/Covid19_Death_Predictive_Analysis.ipynb
+++ b/Covid19_Death_Predictive_Analysis.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "VC_Target_MOIC.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -13,6 +14,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Mayank-004/Covid-19-/blob/main/Covid19_Death_Predictive_Analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -563,12 +574,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZNT-l-WnPbaB",
-        "outputId": "cbc82e83-6ce9-4600-d469-f75f3a80c3bb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 439
-        }
+        },
+        "id": "ZNT-l-WnPbaB",
+        "outputId": "cbc82e83-6ce9-4600-d469-f75f3a80c3bb"
       },
       "source": [
         "dataset"
@@ -881,11 +892,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "r644wQi5QUgz",
-        "outputId": "c6af3a35-5b2f-4caa-83c8-05518019c6bf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "r644wQi5QUgz",
+        "outputId": "c6af3a35-5b2f-4caa-83c8-05518019c6bf"
       },
       "source": [
         "# checking if dataset is balanced or imbalanced\n",
@@ -912,12 +923,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9RycZmlcQezA",
-        "outputId": "d4fcf040-39c4-4e93-e32a-38e515208c03",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 350
-        }
+        },
+        "id": "9RycZmlcQezA",
+        "outputId": "d4fcf040-39c4-4e93-e32a-38e515208c03"
       },
       "source": [
         "sn.countplot(dataset['death'])\n"
@@ -1382,11 +1393,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "m3cBZgYgRXgA",
-        "outputId": "137016c2-2367-47fb-b8ef-3ce9f573c973",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "m3cBZgYgRXgA",
+        "outputId": "137016c2-2367-47fb-b8ef-3ce9f573c973"
       },
       "source": [
         "Y"
