--- a/Covid19_Death_Predictive_Analysis_Imbalance_correction.ipynb
+++ b/Covid19_Death_Predictive_Analysis_Imbalance_correction.ipynb
@@ -62,9 +62,10 @@
         "random.seed(786)\n",
         "import time\n",
         "from sklearn.metrics import accuracy_score, roc_auc_score, classification_report, plot_confusion_matrix, plot_roc_curve,precision_recall_curve,plot_precision_recall_curve\n",
+        "\n",
         "\n"
       ],
-      "execution_count": 301,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -87,18 +88,18 @@
         "id": "SKDP3vj9coit",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 131
+          "height": 439
         },
-        "outputId": "e185cee2-1512-49ad-ef63-9255197f42fa"
+        "outputId": "7030fbb1-dfd0-4be6-927b-fb55af4404fc"
       },
       "source": [
         "url1 = '/content/drive/MyDrive/Colab Notebooks/Covid Dataset/covid.csv'\n",
         "dataset = pd.read_csv(url1, error_bad_lines=False)\n",
         "\n",
         "\n",
-        "dataset.head(2)\n"
+        "dataset\n"
       ],
-      "execution_count": 302,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -200,22 +201,266 @@
               "      <td>1</td>\n",
               "      <td>97</td>\n",
               "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>167386</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>06-04-2020</td>\n",
+              "      <td>01-04-2020</td>\n",
+              "      <td>9999-99-99</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>54</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>99</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>0b5948</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>17-04-2020</td>\n",
+              "      <td>10-04-2020</td>\n",
+              "      <td>9999-99-99</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1</td>\n",
+              "      <td>30</td>\n",
+              "      <td>97</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>99</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>0d01b5</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>13-04-2020</td>\n",
+              "      <td>13-04-2020</td>\n",
+              "      <td>22-04-2020</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>60</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>99</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>566597</th>\n",
+              "      <td>01ff60</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1</td>\n",
+              "      <td>13-05-2020</td>\n",
+              "      <td>03-05-2020</td>\n",
+              "      <td>9999-99-99</td>\n",
+              "      <td>97</td>\n",
+              "      <td>2</td>\n",
+              "      <td>58</td>\n",
+              "      <td>97</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>3</td>\n",
+              "      <td>97</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>566598</th>\n",
+              "      <td>047cd1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>07-04-2020</td>\n",
+              "      <td>06-04-2020</td>\n",
+              "      <td>9999-99-99</td>\n",
+              "      <td>97</td>\n",
+              "      <td>2</td>\n",
+              "      <td>48</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>3</td>\n",
+              "      <td>97</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>566599</th>\n",
+              "      <td>1beb81</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>14-05-2020</td>\n",
+              "      <td>01-05-2020</td>\n",
+              "      <td>9999-99-99</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1</td>\n",
+              "      <td>49</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>99</td>\n",
+              "      <td>3</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>566600</th>\n",
+              "      <td>16fb02</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>31-05-2020</td>\n",
+              "      <td>29-05-2020</td>\n",
+              "      <td>9999-99-99</td>\n",
+              "      <td>97</td>\n",
+              "      <td>1</td>\n",
+              "      <td>43</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>3</td>\n",
+              "      <td>97</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>566601</th>\n",
+              "      <td>0021c9</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1</td>\n",
+              "      <td>16-05-2020</td>\n",
+              "      <td>16-05-2020</td>\n",
+              "      <td>9999-99-99</td>\n",
+              "      <td>97</td>\n",
+              "      <td>1</td>\n",
+              "      <td>65</td>\n",
+              "      <td>97</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>3</td>\n",
+              "      <td>97</td>\n",
+              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
+              "<p>566602 rows × 23 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
-              "       id  sex  patient_type  ... contact_other_covid covid_res icu\n",
-              "0  16169f    2             1  ...                   2         1  97\n",
-              "1  1009bf    2             1  ...                  99         1  97\n",
+              "            id  sex  patient_type  ... contact_other_covid covid_res icu\n",
+              "0       16169f    2             1  ...                   2         1  97\n",
+              "1       1009bf    2             1  ...                  99         1  97\n",
+              "2       167386    1             2  ...                  99         1   2\n",
+              "3       0b5948    2             2  ...                  99         1   2\n",
+              "4       0d01b5    1             2  ...                  99         1   2\n",
+              "...        ...  ...           ...  ...                 ...       ...  ..\n",
+              "566597  01ff60    2             1  ...                   2         3  97\n",
+              "566598  047cd1    1             1  ...                   2         3  97\n",
+              "566599  1beb81    1             2  ...                  99         3   2\n",
+              "566600  16fb02    1             1  ...                   2         3  97\n",
+              "566601  0021c9    2             1  ...                   2         3  97\n",
               "\n",
-              "[2 rows x 23 columns]"
+              "[566602 rows x 23 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 302
+          "execution_count": 5
         }
       ]
     },
@@ -226,7 +471,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9tIqZoF-fM7B",
-        "outputId": "76fba190-4461-4c4c-e942-b966476c0a75"
+        "outputId": "6f9a8e0d-364d-48b1-dacc-0fb9ef2d3f96"
       },
       "source": [
         "from google.colab import drive\n",
@@ -1105,13 +1350,11 @@
       },
       "source": [
         "def eval_result(model_name,X,y,y_pred):\n",
-        "    from sklearn.metrics import accuracy_score, roc_auc_score, classification_report, plot_confusion_matrix, plot_roc_curve\n",
         "    from matplotlib import pyplot as plt\n",
         "\n",
         "    train_accuracy = accuracy_score(y, y_pred)\n",
         "    print(f'accuracy is {train_accuracy}')\n",
-        "    #train_roc_auc = roc_auc_score(y_train, y_predtrain) \n",
-        "    #print(f' Area under the ROC curve for training data {train_roc_auc}')\n",
+        "    \n",
         "    plot_roc_curve(model_name, X, y)\n",
         "\n",
         "    plot_precision_recall_curve(model_name,X,y)\n",
@@ -1127,6 +1370,8 @@
         "id": "vJLjJhn5Xhid"
       },
       "source": [
+        "# user defined function to calculate model training time\n",
+        "\n",
         "def run_model(model,X_train,y_train,verbose=True):\n",
         "    t0=time.time()\n",
         "    if verbose== False:\n",
